Show empty view when no transfer made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
 
     <!-- Historic Activity -->
     <string name="historic_activity_title">Histórico de eventos</string>
+    <string name="historic_no_register">Poxa, você ainda não enviou dinheiro pra nenhum contato</string>
 
 </resources>
