Show success feedback and fix on total transferred value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="send_money_activity_title">Enviar dinheiro</string>
     <string name="label_amount_to_send">Valor a enviar:</string>
     <string name="send_money_button_send">Enviar</string>
+    <string name="send_money_success">Dinheiro enviado com sucesso</string>
 
     <!-- Historic Activity -->
     <string name="historic_activity_title">Histórico de eventos</string>
